--- a/README
+++ b/README
@@ -1,9 +1,5 @@
-Welcome!!
+# Pong Game
+# Assignment 3: Milestone 1
 
-# Assignment 3
-
-
-
-BP x y
-P0 x y
-S0 x
+Shuzhan Xie  59032578
+Kaifan Xu    55072517
