--- a/README
+++ b/README
@@ -1,5 +1,35 @@
 # Pong Game
+
+------------2/21/2018------------
+# Assignment 4: Milestone 2
+
+Shuzhan Xie  59032578
+	- Socket communication part and Server's send/response rules. 
+	- Track of players. 
+
+Kaifan Xu    55072517
+	- New Client UI, showing more paddles and the scores. 
+	- Implemented the new tracking of the ball. 
+
+	
+------------2/15/2018------------
 # Assignment 3: Milestone 1
 
 Shuzhan Xie  59032578
+	- Client
+	- Server's socket part (communicate with client). 
+
 Kaifan Xu    55072517
+	- Server's ball tracking part
+	- Defined Ball and Paddle
+
+	
+---------------------------------
+Command List: 
+ - BP
+ - Px
+ - Sx
+ - NM (Name: Client -> Server)
+ - Nx (Name: Server -> Client)
+ - PI
+ - #  (Client -> Server Only)
