--- a/README
+++ b/README
@@ -9,6 +9,11 @@ Client: Open ..\Client\client.html
 Server: Open the project with Visual Studio 2017, and use "Start Without Debugging"
 		or Open ..\Server\x64\Debug\Server.exe
 
+------------3/02/2018------------
+# Assignment 5: Milestone 3
+
+Added Network Latency
+
 ------------2/21/2018------------
 # Assignment 4: Milestone 2
 
